# Moleku

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  METHODS.md  NOTICE  PLATFORM_VISUALIZATION_AUDIT.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  mcrg.spec  mcrg_desktop.py  mcrg_entry.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
examples/: README.md  aldehydes.csv  aminoazines.csv  beta_ketoesters.csv  cyanoesters.csv  isocyanides.csv  ketones.csv
images/: moleku_simple_icon.icns
mcrg/: __init__.py  catalog.py  engine.py  export_pdf.py  exports.py  i18n.py  loaders.py  plot_canvas.py  plots.py  run_counts.py  runtime_monitor.py  smiles_utils.py  ui_about.py  ui_admet.py  ui_admet_tab.py  ui_app_actions.py  ui_clipboard_helpers.py  ui_common.py  ui_dialogs.py  ui_export_3d.py  ui_export_select.py  ui_export_wiring.py  ui_exports_heavy.py  ui_exports_simple.py  ui_guide.py  ui_motor.py  ui_motor_slots.py  ui_nav_i18n.py  ui_preview.py  ui_results.py  ui_results_helpers.py  ui_run.py  ui_space.py  ui_table.py  ui_table_headings.py
packaging/linux/: Moleku.desktop
packaging/macos/: README.md
scripts/: assemble_mac_app_bundle.py  build_appimage.sh  build_mac_app.sh  build_mac_intel_from_arm.sh  gen_golden_cases.py  generate_icons.py  smoke_test_mac_app.sh
tests/: test_export_zip_contracts.py  test_golden_catalog_coverage.py  test_golden_reactions.py  test_loader_formats.py  test_run_mcr.py  test_smiles_flexibility.py  test_smoke_imports.py
